php/include/pdf_oxide.h

typedef struct DocumentEditor DocumentEditor;
typedef struct FfiUaResults FfiUaResults;
typedef struct PdfDocument PdfDocument;
int32_t pdf_redaction_add(DocumentEditor *handle,
                          uintptr_t page,
                          double x1,
                          double y1,
                          double x2,
                          double y2,
                          double r,
                          double g,
                          double b,
                          int32_t *error_code);
int32_t pdf_redaction_count(DocumentEditor *handle, uintptr_t page, int32_t *error_code);
int32_t pdf_redaction_apply(DocumentEditor *handle,
                            bool scrub_metadata,
                            double r,
                            double g,
                            double b,
                            int32_t *error_code);
int32_t pdf_redaction_scrub_metadata(DocumentEditor *handle, int32_t *error_code);
void *pdf_tsa_client_create(const char *url,
                            const char *username,
                            const char *password,
                            int32_t timeout,
                            int32_t hash_algo,
                            bool use_nonce,
                            bool cert_req,
                            int32_t *error_code);
void pdf_tsa_client_free(void *client);
void *pdf_tsa_request_timestamp(const void *client,
                                const uint8_t *data,
                                uintptr_t data_len,
                                int32_t *error_code);
void *pdf_tsa_request_timestamp_hash(const void *client,
                                     const uint8_t *hash,
                                     uintptr_t hash_len,
                                     int32_t hash_algo,
                                     int32_t *error_code);
const uint8_t *pdf_timestamp_get_token(const void *ts, uintptr_t *out_len, int32_t *error_code);
int64_t pdf_timestamp_get_time(const void *ts, int32_t *error_code);
char *pdf_timestamp_get_serial(const void *ts, int32_t *error_code);
char *pdf_timestamp_get_tsa_name(const void *ts, int32_t *error_code);
char *pdf_timestamp_get_policy_oid(const void *ts, int32_t *error_code);
int32_t pdf_timestamp_get_hash_algorithm(const void *ts, int32_t *error_code);
const uint8_t *pdf_timestamp_get_message_imprint(const void *ts,
                                                 uintptr_t *out_len,
                                                 int32_t *error_code);
bool pdf_timestamp_verify(const void *ts, int32_t *error_code);
void pdf_timestamp_free(void *ts);
bool pdf_signature_add_timestamp(const void *_sig, const void *_ts, int32_t *error_code);
bool pdf_signature_has_timestamp(const void *_sig, int32_t *error_code);
void *pdf_signature_get_timestamp(const void *_sig, int32_t *error_code);
int32_t pdf_pdf_ua_warning_count(const FfiUaResults *results);
char *pdf_pdf_ua_get_warning(const FfiUaResults *results, int32_t index, int32_t *error_code);
bool pdf_pdf_ua_get_stats(const FfiUaResults *results,
                          int32_t *out_struct,
                          int32_t *out_images,
                          int32_t *out_tables,
                          int32_t *out_forms,
                          int32_t *out_annotations,
                          int32_t *out_pages,
                          int32_t *error_code);
int32_t pdf_document_import_form_data(const void *_document,
                                      const char *_data_path,
                                      int32_t *error_code);
int32_t pdf_editor_import_fdf_bytes(const void *_document,
                                    const uint8_t *_data,
                                    uintptr_t _data_len,
                                    int32_t *error_code);
int32_t pdf_editor_import_xfdf_bytes(const void *_document,
                                     const uint8_t *_data,
                                     uintptr_t _data_len,
                                     int32_t *error_code);
uint8_t *pdf_document_export_form_data_to_bytes(PdfDocument *document,
                                                int32_t format_type,
                                                uintptr_t *out_len,
                                                int32_t *error_code);
bool pdf_convert_to_pdf_a(PdfDocument *document, int32_t level, int32_t *error_code);