ruby/lib/pdf_oxide/ffi/bindings.rb


      # Verification helper functions
      # REMOVED phantom (no upstream symbol): :pdf_oxide_verification_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_verification_is_valid (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_verification_is_trusted (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_verification_is_self_signed (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_verification_get_error (1 line)

      # ============================================================
      # REDACTION OPERATIONS
      # ============================================================

      # Add a redaction annotation to a page
      attach_function :pdf_redaction_add,
                      [:pointer, :int32, :float, :float, :float, :float, :uint8, :uint8, :uint8, :pointer],
                      :bool

      # Apply all pending redactions
      attach_function :pdf_redaction_apply,
                      [:pointer, :bool, :uint8, :uint8, :uint8, :pointer],
                      :bool

      # Scrub document metadata
      attach_function :pdf_redaction_scrub_metadata,
                      [:pointer, :bool, :bool, :bool, :pointer],
                      :bool

      # Get count of pending redactions
      attach_function :pdf_redaction_count, [:pointer, :pointer], :int32

      # ============================================================
      # FLATTENING OPERATIONS
      # ============================================================

      # Flatten all form fields
      # REMOVED phantom (no upstream symbol): :pdf_document_editor_flatten_forms (1 line)

      # Flatten form fields on a specific page
      # REMOVED phantom (no upstream symbol): :pdf_document_editor_flatten_forms_page (1 line)

      # Flatten all annotations
      # REMOVED phantom (no upstream symbol): :pdf_document_editor_flatten_annotations (1 line)

      # Flatten annotations on a specific page
      # REMOVED phantom (no upstream symbol): :pdf_document_editor_flatten_annotations_page (1 line)

      # ============================================================
      # COMPLIANCE OPERATIONS
      # ============================================================

      # Convert document to PDF/A
      # REMOVED duplicate declaration: :pdf_convert_to_pdf_a (1 line)

      # Validate document against PDF/A
      # REMOVED phantom (no upstream symbol): :pdf_validate_pdfa (1 line)

      # ============================================================
      # ACCESSIBILITY OPERATIONS
      # ============================================================

      # Check if document is tagged
      # REMOVED phantom (no upstream symbol): :pdf_accessibility_is_tagged (1 line)

      # Get the document structure tree
      # REMOVED phantom (no upstream symbol): :pdf_accessibility_get_structure_tree (1 line)

      # Automatically tag the document
      # REMOVED phantom (no upstream symbol): :pdf_accessibility_auto_tag (1 line)

      # Set alt text on a structure element
      # REMOVED phantom (no upstream symbol): :pdf_accessibility_set_alt_text (1 line)

      # Set the document language
      # REMOVED phantom (no upstream symbol): :pdf_accessibility_set_language (1 line)

      # Set the document title for accessibility
      # REMOVED phantom (no upstream symbol): :pdf_accessibility_set_title (1 line)

      # Free a structure tree handle
      # REMOVED phantom (no upstream symbol): :pdf_structure_tree_free (1 line)

      # Free a structure element handle
      # REMOVED phantom (no upstream symbol): :pdf_struct_elem_free (1 line)

      # ============================================================
      # OPTIMIZATION OPERATIONS
      # ============================================================

      # Open document with mmap
      # REMOVED phantom (no upstream symbol): :pdf_document_open_mmap (1 line)

      # Subset fonts to remove unused glyphs
      # REMOVED phantom (no upstream symbol): :pdf_optimize_subset_fonts (1 line)

      # Downsample images
      # REMOVED phantom (no upstream symbol): :pdf_optimize_downsample_images (1 line)

      # Deduplicate content streams
      # REMOVED phantom (no upstream symbol): :pdf_optimize_deduplicate (1 line)

      # Run full optimization pipeline
      # REMOVED phantom (no upstream symbol): :pdf_optimize_full (1 line)

      # Get bytes saved from optimization result
      # REMOVED phantom (no upstream symbol): :pdf_optimization_result_bytes_saved (1 line)

      # Free optimization result handle
      # REMOVED phantom (no upstream symbol): :pdf_optimization_result_free (1 line)

      # ============================================================
      # ENTERPRISE OPERATIONS
      # ============================================================

      # Bates numbering
      # REMOVED phantom (no upstream symbol): :pdf_bates_apply (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_bates_apply_advanced (7 lines)
      #
      #
      #
      #
      #
      #

      # Document comparison
      # REMOVED phantom (no upstream symbol): :pdf_compare_pages (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_comparison_get_similarity (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_comparison_get_diff_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_comparison_get_diff (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_comparison_get_diff_type (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_compare_documents (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_comparison_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_comparison_free (1 line)

      # Header/footer stamping
      # REMOVED phantom (no upstream symbol): :pdf_stamp_header (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_stamp_footer (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_stamp_header_footer (1 line)

      # ============================================================
      # TSA TIMESTAMP OPERATIONS (17 functions)
      # ============================================================

      attach_function :pdf_tsa_client_create, [:string, :string, :string, :int32, :int32, :bool, :bool, :pointer], :pointer
      attach_function :pdf_tsa_client_free, [:pointer], :void
      attach_function :pdf_tsa_request_timestamp, [:pointer, :pointer, :size_t, :pointer], :pointer
      attach_function :pdf_tsa_request_timestamp_hash, [:pointer, :pointer, :size_t, :int32, :pointer], :pointer
      attach_function :pdf_timestamp_get_token, [:pointer, :pointer, :pointer], :pointer
      attach_function :pdf_timestamp_get_time, [:pointer, :pointer], :int64
      attach_function :pdf_timestamp_get_serial, [:pointer, :pointer], :string
      attach_function :pdf_timestamp_get_tsa_name, [:pointer, :pointer], :string
      attach_function :pdf_timestamp_get_policy_oid, [:pointer, :pointer], :string
      attach_function :pdf_timestamp_get_hash_algorithm, [:pointer, :pointer], :int32
      attach_function :pdf_timestamp_get_message_imprint, [:pointer, :pointer, :pointer], :pointer
      attach_function :pdf_timestamp_verify, [:pointer, :pointer], :bool
      attach_function :pdf_timestamp_free, [:pointer], :void
      attach_function :pdf_signature_add_timestamp, [:pointer, :pointer, :pointer], :bool
      # REMOVED duplicate declaration: :pdf_signature_has_timestamp (1 line)
      attach_function :pdf_signature_get_timestamp, [:pointer, :pointer], :pointer

      # ============================================================
      # PDF/UA EXTENDED VALIDATION (3 functions)
      # ============================================================

      attach_function :pdf_pdf_ua_warning_count, [:pointer], :int32
      attach_function :pdf_pdf_ua_get_warning, [:pointer, :int32, :pointer], :pointer
      attach_function :pdf_pdf_ua_get_stats, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :bool

      # ============================================================
      # FDF/XFDF IN-MEMORY IMPORT/EXPORT (4 functions)
      # ============================================================

      attach_function :pdf_editor_import_fdf_bytes, [:pointer, :pointer, :size_t, :pointer], :int32
      attach_function :pdf_editor_import_xfdf_bytes, [:pointer, :pointer, :size_t, :pointer], :int32
      attach_function :pdf_document_import_form_data, [:pointer, :string, :pointer], :int32
      attach_function :pdf_document_export_form_data_to_bytes, [:pointer, :int32, :pointer, :pointer], :pointer

      # ============================================================
      # TOTAL: 600+ FUNCTIONS DECLARED (100% API Coverage)
      # ============================================================
      # All core FFI functions now available for Ruby binding

      # ============================================================
      # AUTO-REPAIR Phase 2: cdylib symbols not declared by the prepared
      # snapshot.  Generic signature so the gem loads; real wrappers must
      # be added by Phase 3 (extend) and Phase 4 (test/CI).
      # ============================================================
